# Quantum--Strict

./: .gitignore  README.md  knowledge.db  package-lock.json  pyproject.toml  test_pinata_jwt.py
qkn-frontend/: README.md  angular.json  package-lock.json  package.json
qkn-frontend/src/: App.tsx  index.html  main.tsx  styles.css
qkn-frontend/src/app/: app.component.spec.ts  app.component.ts
src/app/: app.socket.py  database.py  main.py
src/app/quantum/: engine.py
